--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
                         Cùng nhau trưởng thành - Cùng nhau nhớ mãi!</p>
                      <div class="custom-heading-left">Cùng nhau lớn lên trong suốt quá trình học tập</div>
                      <div class="custom-heading-center">Lớp 10</div>
-                     <a href="images/z6384782128015_a309666f8641dab3d73f7e7edb42c76c.jpg" data-lightbox="image-1" >
-                        <img class="image-right" src="images/z6384782128015_a309666f8641dab3d73f7e7edb42c76c.jpg">
+                     <a href="images/image1.jpg" data-lightbox="image-1" >
+                        <img class="image-right" src="images/image1.jpg">
                     </a>
                      <p>Năm đầu tiên bước vào lớp 10, bọn mình lần đầu gặp nhau, ai cũng mang trong mình sự bỡ ngỡ và e dè. Mỗi người 
                      đều còn lạ lẫm với môi trường mới, với những gương mặt chưa quen thuộc. Tuy nhiên, sau khi nhà trường tổ chức các
@@ -181,8 +181,8 @@
                       . Từ đó, lớp bắt đầu hình thành một sự đoàn kết bền chặt, trở thành một tập thể gắn bó như một gia đình nhỏ,
                        nơi mọi người luôn sẵn sàng sẻ chia và giúp đỡ lẫn nhau.</p>  
                     <div class="custom-heading-left">Khi Những Lời Ca Dệt Nên Tình Bạn</div>
-                    <a href="images/316019531_1453168688512511_801031216481668129_n.jpg" data-lightbox="image-1" >
-                        <img class="img-2" src="images/316019531_1453168688512511_801031216481668129_n.jpg">
+                    <a href="images/image2.jpg" data-lightbox="image-1" >
+                        <img class="img-2" src="images/image2.jpg">
                     </a>
                          <p>Buổi văn nghệ đầu tiên của lớp 10 là một cột mốc đáng nhớ, đánh dấu sự nỗ lực chung của cả lớp. Từ những ngày
                          đầu còn lúng túng, bọn mình đã cùng nhau lên ý tưởng, phân chia nhiệm vụ và tập luyện không ngừng nghỉ. Dù 
@@ -192,28 +192,28 @@
                            cho những nỗ lực khác, giúp bọn mình học cách đoàn kết và gắn bó hơn trên chặng đường phía trước.</p>
                 <div class="custom-heading-center">Lớp 11</div> 
                 <div class="custom-heading-left">Khoảnh Khắc Vinh Quang Của Đội Bóng Chuyền Nữ</div> 
-                <a href="images/431857813_779362667446175_6691626308176741513_n.jpg" data-lightbox="image-1" >
-                    <img class="image-right-2"  src="images/431857813_779362667446175_6691626308176741513_n.jpg">
+                <a href="images/image3.jpg" data-lightbox="image-1" >
+                    <img class="image-right-2"  src="images/image3.jpg">
                 </a>
                     <p>Sau một ngày đầy thử thách, đội bóng chuyền nữ lớp mình đã xuất sắc giành chiến thắng trong trận quyết định 
                         với lớp 12. Dù vất vả trước những pha bóng căng thẳng, tinh thần đoàn kết và chiến thuật sắc bén đã giúp 
                         cả đội vượt qua mọi khó khăn. Tiếng còi kết thúc vang lên cùng niềm vui và tự hào bùng nổ, bởi chiến thắng
                          này không chỉ là vinh quang mà còn là minh chứng cho sự đồng lòng và kiên trì của cả tập thể.</p>
                 <div class="custom-heading-left">20/10 đầy nhẹ nhàng</div> 
-                <a href=" images/387334546_349552954129602_717289689746002212_n.jpg" data-lightbox="image-1" >
-                    <img class="img-2" src=" images/387334546_349552954129602_717289689746002212_n.jpg">
+                <a href=" images/image4.jpg" data-lightbox="image-1" >
+                    <img class="img-2" src=" images/image4.jpg">
                 </a>
                     <p>Ngày 20/10 năm ấy thật nhẹ nhàng và đơn giản. Không có những buổi lễ rộn ràng hay những món quà cầu kỳ, 
                         chỉ là một bó hoa nhỏ với những cánh hồng tươi thắm được đặt cẩn thận lên bàn. Kèm theo đó là những 
                         lời chúc chân thành: "Chúc các bạn nữ luôn vui vẻ và hạnh phúc, mãi là những bông hoa đẹp nhất."</p> 
                 <div class="custom-heading-left">Sắc Màu Văn Nghệ - Tự Hào Lớp Chúng Ta</div>  
-                <a href=images/367951228_875315187312811_6207865703489858439_n.jpg data-lightbox="image-1" >
-                    <img class="img-left-2" src=images/367951228_875315187312811_6207865703489858439_n.jpg width="50%" height="auto">
+                <a href=images/image5.jpg data-lightbox="image-1" >
+                    <img class="img-left-2" src=images/image5.jpg width="50%" height="auto">
                 </a>
                     <p>buổi văn nghệ đầy vui  vẻ</p>  
                 <div class="custom-heading-left-2">Dấu Ấn 8/3 Lần Đầu Của Lớp Chúng Mình</div>  
-                <a href="images/8:3.jpg" data-lightbox="image-1" >
-                    <img class="img-left" src="images/8:3.jpg">
+                <a href="images/image6.jpg" data-lightbox="image-1" >
+                    <img class="img-left" src="images/image6.jpg">
                 </a>
                     <p>Vào một buổi chiều tuyệt vời của ngày mùng 8 tháng 3, khi tiết học văn gần kết thúc, 
                         không khí trong lớp tràn ngập sự háo hức và vui tươi. Các bạn nữ chia nhau ra sân chơi bóng chuyền,
@@ -225,7 +225,7 @@
                         . Một buổi chiều không chỉ ngọt ngào mà còn đong đầy sự gắn kết và tình bạn</p>
                         <div class="custom-heading-left">Những thước phim đầy kỉ niệm của chúng ta</div>
                      <video controls>
-                     <source src="videos/10000000_8102705383078575_9942717199877182_n.mp4" type="video/mp4">
+                     <source src="videos/video1.mp4" type="video/mp4">
                      </video>
                 <div class="custom-heading-center">Năm Cuối Cấp - Thanh Xuân Rực Rỡ Nhất - Dấu Ấn Cuối Cùng Của Thời Học Sinh</div>
                    <p>Ngày 19/11, trong không khí bình thường của buổi học sáng, chẳng ai ngờ rằng chúng tớ những chàng trai trong lớp 
